--- a/Gst/ClientApp/gst/src/app/componentes/especialidades/criar-especialidade/criar-especialidade.component.html
+++ b/Gst/ClientApp/gst/src/app/componentes/especialidades/criar-especialidade/criar-especialidade.component.html
@@ -1,1 +1,8 @@
-<p>criar-especialidade works!</p>
+<form [formGroup]="formulario">
+  <label for="nome">Especialidade</label>
+  <input type="text" name="nome" id="nome" formControlName="nome">
+
+  <button type="button" (click)="criarEspecialidade()">Salvar</button>
+  <button type="button" (click)="cancelar()">Cancelar</button>
+
+</form>
